<?xml version="1.0"?>
<package format="2">
  <name>owayeol_cctv</name>
  <version>0.0.0</version>
  <description>The owayeol_cctv package</description>
  <maintainer email="pjh@todo.todo">pjh</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>

  <export>

  </export>
</package>
